# intl-cli

./: .gitignore  Cargo.toml  README.md  output.json
src/: cli.rs  main.rs
src/intl/: extract.rs  mod.rs  run.rs
src/translate/: mod.rs  tencent.rs  translate.rs
src/utils/: hash.rs
test/: a.ts  b.tsx
