[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive", "cargo"] }
globset = "0.4"
swc_ecma_parser = {version = "6.0", features = ["typescript"]}
swc_common = { version = "5.0", features = ["tty-emitter"]}
swc_ecma_visit = { version = "5.0" }
swc_ecma_ast = { version = "5.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
